kubernetes/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: "/v1"
      rewrite:
        uri: /
      route:
        - destination:
            host: players-v1-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/v2"
      rewrite:
        uri: /
      route:
        - destination:
            host: players-v2-service
            port:
              number: 8080
